# parkol

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: api.rst  conf.py  index.rst
src/parkol/: __init__.py  cftp_bc20.py  cftp_huber.py  hybrid.py  prs.py  sample.py  utils.py
tests/: test_sample.py
