[build-system]
requires = ["setuptools>=68.0,<75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parkol"
version = "0.2.1"
description = "Exact uniform sampling of proper graph colourings via soft colouring and partial rejection sampling"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Sarat Moka", email = "s.moka@unsw.edu.au"},
]
dependencies = [
    "numpy",
    "scipy",
    "networkx",
]

[project.urls]
Homepage = "https://github.com/saratmoka/parkol"
Documentation = "https://parkol.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]
